# llm-fullstack-dev-roadmap

./: .gitignore  LICENSE  PROJECT_AUDIT.md  README.md  ROADMAP.md  learning-journal.md  requirements.txt  update-readme-prompt.md
final-ai-gateway/backend/: pyproject.toml
final-ai-gateway/backend/app/: config.py  main.py
final-ai-gateway/backend/tests/integration/: test_infrastructure.py
phase1_prompt_api/llm_chat_service/: .env.example  Makefile  pyproject.toml
phase1_prompt_api/llm_chat_service/app/: auth.py  config.py  dependencies.py  errors.py  main.py
phase1_prompt_api/llm_chat_service/app/routes/: chat.py  health.py  models.py
phase1_prompt_api/llm_chat_service/app/schemas/: chat.py  error.py
phase1_prompt_api/llm_chat_service/tests/: conftest.py  test_chat.py
phase4_projects/04_sam2-vision-segmentation-lab/: .env.example  .gitignore  Makefile  README.md  Week04_runbook.md  pyproject.toml  requirements.txt
phase4_projects/04_sam2-vision-segmentation-lab/configs/: app.yaml  inpaint.yaml  logging.yaml  sam2.yaml
phase4_projects/04_sam2-vision-segmentation-lab/docs/: architecture.md  failure_cases.md  interview_notes.md  mask_quality_metrics.md  model_cards.md
phase4_projects/04_sam2-vision-segmentation-lab/notebooks/: sam2_segmentation_demo.ipynb
phase4_projects/04_sam2-vision-segmentation-lab/outputs/: api_box_result.json  api_point_result.json
phase4_projects/04_sam2-vision-segmentation-lab/scripts/: 00_check_env.py  01_download_sam2.py  02_segment_point.py  03_segment_box.py  04_segment_auto.py  05_mask_quality_report.py  06_sam2_inpaint.py  07_video_track.py  99_smoke_test.py
phase4_projects/04_sam2-vision-segmentation-lab/src/sam2_lab/: __init__.py  app.py  config.py  device.py  logging_utils.py
phase4_projects/04_sam2-vision-segmentation-lab/tests/: test_api_contract.py  test_device.py  test_manifest.py  test_mask_postprocess.py  test_quality_report.py
phase4_projects/05-vlm-understanding-lab/: .gitignore  Makefile  README.md  Week5_runbook.md  pyproject.toml  requiresment.txt
phase4_projects/05-vlm-understanding-lab/configs/: model.llava-onevision-0.5b.yaml  model.qwen25vl-3b.yaml  prompts.yaml
phase4_projects/05-vlm-understanding-lab/scripts/: bench_curl.sh  print_env.py  serve_qwen_vl.py  smoke_llava.py
phase4_projects/05-vlm-understanding-lab/src/vlm_p5/: __init__.py  device.py  gateway.py  qwen_engine.py  schemas.py
phase4_projects/08_graphrag-lab/: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  runbook.md  settings.yaml  settings.yaml.bak
phase4_projects/08_graphrag-lab/configs/: settings.local.yaml  settings.yaml
phase4_projects/08_graphrag-lab/data/input/: wiki_Apache_Spark.txt  wiki_Attention_(machine_learning).txt  wiki_Automatic_summarization.txt  wiki_BERT_(language_model).txt  wiki_Backpropagation.txt  wiki_Batch_normalization.txt  wiki_Byte-pair_encoding.txt  wiki_Contrastive_Language–Image_Pre-training.txt  wiki_Convolutional_neural_network.txt  wiki_Diffusion_model.txt  wiki_Dropout_(neural_networks).txt  wiki_FAISS.txt  wiki_Fine-tuning_(deep_learning).txt  wiki_GPT-3.txt  wiki_GPT-4.txt  wiki_Generative_adversarial_network.txt  wiki_Generative_pre-trained_transformer.txt  wiki_Graph_neural_network.txt  wiki_Image_segmentation.txt  wiki_Information_retrieval.txt  wiki_Knowledge_graph.txt  wiki_Kubernetes.txt  wiki_Large_language_model.txt  wiki_LoRA_(machine_learning).txt  wiki_Long_short-term_memory.txt  wiki_Named-entity_recognition.txt  wiki_Neural_machine_translation.txt  wiki_Object_detection.txt  wiki_Okapi_BM25.txt  wiki_Overfitting.txt  wiki_Prompt_engineering.txt  wiki_Question_answering.txt  wiki_Recurrent_neural_network.txt  wiki_Reinforcement_learning.txt  wiki_Reinforcement_learning_from_human_feedback.txt  wiki_Residual_neural_network.txt  wiki_Retrieval-augmented_generation.txt  wiki_Self-supervised_learning.txt  wiki_Semantic_search.txt  wiki_Sentiment_analysis.txt  (+9 more)
phase4_projects/08_graphrag-lab/data/raw/: wiki_Apache_Spark.txt  wiki_Attention_(machine_learning).txt  wiki_Automatic_summarization.txt  (+46 more)
phase4_projects/08_graphrag-lab/docs/: architecture.md  comparison_report.md
phase4_projects/08_graphrag-lab/prompts/: community_report.txt  entity_extraction.txt
phase4_projects/08_graphrag-lab/scripts/: 00_check_env.py  01_download_corpus.sh  02_preprocess_docs.py  03_init_graphrag.py  04_query_demo.py  05_vector_rag_baseline.py  06_compare_rag.py  07_analyze_artifacts.py  run_graphrag.py
phase4_projects/08_graphrag-lab/tests/: test_comparator.py
(+472 files in other folders)
