[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-gateway"
version = "1.0.0"
description = "Enterprise Lightweight LLM / RAG / Agent Serving Governance Gateway"
readme = "../README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.25.0",
    "httpx>=0.26.0",
    "redis>=5.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "sse-starlette>=2.0.0",
    "langchain>=0.3.0",
    "langgraph>=0.2.0",
    "openai>=1.6.0",
    "chromadb>=0.4.0",
    "tiktoken>=0.5.0",
    "numpy>=1.26.0",
    "faiss-cpu>=1.7.0",
    "rank-bm25>=0.2.0",
    "websockets>=12.0",
    "tenacity>=8.2.0",
]
optional-dependencies.test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "locust>=2.20.0",
    "fakeredis>=2.20.0",
]
optional-dependencies.dev = [
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[project.scripts]
ai-gateway = "app.main:main"

[tool.setuptools.packages.find]
include = ["app*"]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "slow: Slow tests",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
