[project]
name = "sam2-vision-segmentation-lab"
version = "0.1.0"
description = "SAM 2 pixel-level segmentation lab with mask post-processing and Diffusers inpaint integration."
requires-python = ">=3.11"
authors = [
  { name = "Chenxi" }
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]