[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

# P8 GraphRAG Lab — 知识图谱检索实验平台
# 基于 Microsoft GraphRAG 3.1.0，使用 DeepSeek API + 本地 BGE-M3
[project]
name = "graphrag-lab"
version = "1.0.0"
description = "P8: GraphRAG Knowledge Graph Retrieval — production-grade RAG evaluation platform"
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Chenxi", email = "gyc.chenxi@example.com"}]
keywords = ["graphrag", "rag", "knowledge-graph", "llm", "vector-search"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
